[package]
name = "pob-runtime-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
wgpu = "0.19"
glyphon = "0.5"
image = { version = "0.24", features = ["png", "webp"] }
mlua = { version = "0.9", features = ["luajit", "vendored"] }
arboard = "3"
flate2 = "1"
dirs = "5"
glob = "0.3"
log = "0.4"
env_logger = "0.10"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
